Modify deploy.yml for Docker login and platforms
Updated GitHub Actions workflow to use github.token instead of secrets.GHCR_PAT for Docker login and removed linux/amd64 platform from build.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
+          password: ${{ github.token }}
 
       - name: Build & Push (linux/arm64)
         uses: docker/build-push-action@v6
@@ -34,7 +34,7 @@ jobs:
           context: ./server
           file: ./server/Dockerfile
           push: true
-          platforms: linux/arm64,linux/amd64
+          platforms: linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/moup-server:latest
             ghcr.io/${{ github.repository_owner }}/moup-server:${{ github.sha }}
