--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
     # 'server'는 docker-compose.yml에 정의된 Spring Boot 서비스 이름입니다.
     # Docker 내부 DNS가 'server'를 'server' 컨테이너의 IP로 해석해줍니다.
     upstream moup_backend {
-        server server:8080;
+        server moup-server-1:8080;
     }
 
     # --- 서버 블록 1: HTTP(80) -> HTTPS(443) 강제 리디렉션 ---
@@ -37,7 +37,7 @@ http {
         listen 80;
 
         # [수정] 여기에 실제 도메인 이름을 적으세요 (예: home.moup-server.com)
-        server_name home.moup-server.com;
+        server_name new.moup-server.com;
 
         # Let's Encrypt 갱신을 위한 경로 (http-01 challenge)
         # docker-compose.yml의 volumes 설정과 맞춰야 합니다.
