--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,39 @@
-server {
-    listen 80;
-    # NPM에서 전달받을 도메인 이름들
-    server_name new.moup-server.com localhost;
+user  nginx;
+worker_processes  auto;
 
-    location / {
-        proxy_pass http://server:8080;
-        
-        # NPM이 넘겨준 헤더 정보를 그대로 유지
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen 80;
+        # NPM에서 전달받을 도메인 이름들
+        server_name new.moup-server.com localhost;
+
+        location / {
+            proxy_pass http://server:8080;
+
+            # NPM이 넘겨준 헤더 정보를 그대로 유지
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
