--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,8 +23,10 @@ http {
 
     server {
         listen 80;
-        # NPM에서 전달받을 도메인 이름들
+
         server_name new.moup-server.com localhost;
+
+        client_max_body_size 10M;
 
         location / {
             proxy_pass http://server:8080;
