fix: 도메인 명 home으로 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
     server {
         listen 80;
 
-        server_name new.moup-server.com localhost;
+        server_name home.moup-server.com localhost;
 
         client_max_body_size 10M;
 
