--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,10 +23,9 @@ http {
 
     server {
         listen 80;
-
         server_name home.moup-server.com localhost;
 
-        client_max_body_size 10M;
+        client_max_body_size 0;
 
         location / {
             proxy_pass http://server:8080;
