--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,10 @@ services:
         condition: service_healthy # MySQL 준비 완료 후 시작
       redis:
         condition: service_started # Redis 시작 후 시작
+    environment:
+      FIREBASE_ACCOUNT_KEY_PATH: /app/keys/moup-e5326-firebase-adminsdk-fbsvc-6ec6692e3b.json
+    volumes:
+      - ./server/src/main/resources/keys:/app/keys:ro
     restart: unless-stopped # 운영 환경 재시작 정책
 
   # 3. MySQL Database
