--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     
     // Firebase 의존성
     implementation("com.google.firebase:firebase-admin:8.1.0")
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
